2003-02-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03749] README.cygwin
	* doc-jp/README.cygwin: added
	* doc/README: updated

2003-02-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.4 release candidate 2
	* version.c.in: update

2003-02-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03742] Re: Bug##180814: w3m: Missing w3mimgdisplay message at startup
	* image.c (getCharSize): stderr redirect to omit /bin/sh error message

2003-02-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (install-core): fix for broken non-POSIX /bin/sh

2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00868] fix mark_all_pages
	* anchor.c (reAnchorAny): next_line process for MarkAllPages

2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00867] fix installation problem
	* XMakefile (install-core): test AUXBIN_TARGETS

2003-02-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2003-02-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.4 release candidate 1
        * version.c.in: update

2003-02-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03737] local-CGI POST
	* local.c (localcgi_post): use tmp file

2003-02-08  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03736] dirlist sort
	* scripts/dirlist.cgi.in (right_dir): use cmp for filename comparison

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03735] Re: make error of checkType arg
	* etc.c (checkType): delete USE_ANSI_COLOR
	* file.c (addnewline): macro for USE_ANSI_COLOR
		(readHeader): rewrite of USE_ANSI_COLOR
		(HTMLlineproc2body): ditto
		(addnewline2): ditto
		(addnewline): ditto
		(loadBuffer): ditto
		(getNextPage): ditto
	* proto.h (checkType): macro for USE_ANSI_COLOR

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03733] Re: display decoded URL
	* display.c (make_lastline_link): buf->document_code

2003-02-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
