@@ -1,3 +1,10 @@
+2003-02-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03753] Fixed multipart.cgi
+	* scripts/multipart/multipart.cgi.in: remove w3m-control
+			use input hidden
+			add form_encode
+
 2003-02-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>
 
 	* [w3m-dev 03749] README.cygwin
@@ -7167,4 +7174,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.752 2003/02/17 16:02:04 ukai Exp $
+$Id: ChangeLog,v 1.753 2003/02/18 15:26:38 ukai Exp $
